Fix spacing on mobile

--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ body {
   font-family: 'Lato', 'sans-serif';
   margin-left: auto;
   margin-right: auto;
+  padding: 1rem;
   max-width: 8.5in;
 }
 
@@ -26,25 +27,27 @@ body>header>h1 {
 }
 
 section>header>h2 {
+  margin-top: 2rem;
   margin-bottom: 0.25rem;
-  /* text-decoration: underline; */
 }
 
 section>h3 {
-  margin-block-start: 2rem;
-  margin-block-end: 2rem;
+  margin-block-start: 1rem;
+  margin-block-end: 1rem;
 }
 
 section>header {
-  max-width: 25%;
+  width: 25%;
+  min-width: 120px;
   border-bottom: 1px solid gray;
   margin-bottom: 0.25rem;
 }
 
 .timeline {
   margin-top: 1rem;
-  margin-left: 2rem;
+  margin-left: 1rem;
   border-left: 4px solid lightgrey;
+  margin-right: 1rem;
   padding-left: 1rem;
   padding-bottom: 1rem;
   margin-bottom: 1rem;
@@ -81,10 +84,11 @@ footer {
   padding-left: 1rem;
   padding-bottom: 1rem;
   border-bottom: 1px dotted lightgray;
+  margin-top: 1rem;
 }
 
-.timeline>.item {
-  margin-top: 1rem;
+.timeline>.item:last-child {
+  border-bottom: none;
 }
 
 .timeline>.item>header {
